Fixed header text wrapping on main page flex boxes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,8 +19,8 @@ footer {
 
 .jumbotron-before {
   position:absolute;
-    padding-left: 15px;
-    padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   width: 100%;
   height: 400px;
   background: url('http://i.imgur.com/JO1X8eY.jpg');
@@ -34,9 +34,9 @@ footer {
 .jumbotron {
   padding-left: 15px;
   padding-right: 15px;
-   height:400px;
-   /*background-position: center;*/
-   color: white;
+  height:400px;
+  /*background-position: center;*/
+  color: white;
  }
 
  .jumbotron h1 {
@@ -59,10 +59,11 @@ footer {
 }
 
 .main .container {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
   background-color: #42a5f5;
   width: 100%;
+  flex-direction: row;
   margin-top: 20px;
   margin-bottom: 20px;
   height: auto;
@@ -71,22 +72,28 @@ footer {
   padding-bottom: 20px;
 }
 
-.container ul {
-  display: flex;
-  flex-direction: row;
+.label {
+  flex-basis: 100%;
+  order: 1;
+  word-wrap: normal;
   flex-wrap: wrap;
-  list-style: none;
-  text-align: center;
+  flex-direction: column;
+  align: center;
+  color: black;
+}
+
+.label h2 {
+  margin-bottom: 0px;
 }
 
 .flex-item {
 background-color: #64b5f6;
+order: 2;
 border: 1px solid grey;
 padding: 5px;
 width: auto;
 height: auto;
 margin: 10px;
-/*line-height: 150px;*/
 color: white;
 font-weight: bold;
 font-size: 3em;
@@ -100,7 +107,6 @@ text-align: center;
 }
 
 .signin-form {
-  /*margin: auto;*/
   display: block;
   box-sizing: border-box;
   width: 400px;
